--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" type="text/css" href="main.css">
   <body>
     <h1>Hello World -- This is my website!</h1>
-    <p>I'm making this to host my portfolio for free.</p>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe>
   </body>
 </html>
