--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       Digital media  art can be contemporary or modern but the advancement in technology and art will only get better as time continues.</p>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+    <a href="https://charlesgraciano.github.io/Charlie_Project3">CLICK ME</a>
   </body>
 </html>
