--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <p> As an artist, there are limitless ways to express our creativity.<br>
       Digital media  art can be contemporary or modern but the advancement in technology and art will only get better as time continues.<br>
       I'm Charles Graciano and I'm an artist of Digital Media and Motion Graphics. </p>
-     <p> Motion graphics fascinate me the most when digital media is involved. while studying in San Francisco, I learned a lot about the involvement with media graphics. Something I found interesting while reading this chapter was the evolution of animation. The chapter described man made interments that would manipulate images to move on their own placing them next to each other or on top of each other. For example, thaumatropes and zoetropes. I actually had the opportunity to see both of these instruments in action. I made a thaumatrope myself and have seen a zoetrope fro the movie toy story in an animation exhibit in Disneyland park. Motion graphics is what Disney does with their animation films and earlier motion graphics was very experimental. Something that is interesting is that the effects these early pioneers would experiment with would actually have an influence to today’s movie producers and directors. 
+    <p> Motion graphics fascinate me the most when digital media is involved.<br>
+       while studying in San Francisco, I learned a lot about the involvement with media graphics.<br>
+       Something I found interesting while reading this chapter was the evolution of animation. <br>
+       The chapter described man made interments that would manipulate images to move on their own placing them next to each other or on top of each other.<br>
+       For example, thaumatropes and zoetropes. I actually had the opportunity to see both of these instruments in action.<br>
+       I made a thaumatrope myself and have seen a zoetrope fro the movie toy story in an animation exhibit in Disneyland park. <br>
+       Motion graphics is what Disney does with their animation films and earlier motion graphics was very experimental.<br>
+       Something that is interesting is that the effects these early pioneers would experiment with would actually have an influence to today’s movie producers and directors. 
       </p>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe><br>
     <a href="https://charlesgraciano.github.io/Charlie_Project3">CLICK ME</a>
   </body>
 </html>
