--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
       Digital media  art can be contemporary or modern but the advancement in technology and art will only get better as time continues.<br>
       I'm Charles Graciano and I'm an artist of Digital Media and Motion Graphics. </p>
     <p> Motion graphics fascinate me the most when digital media is involved.<br>
-       while studying in San Francisco, I learned a lot about the involvement with media graphics.<br>
-       Motion graphics is what Disney does with their animation films and earlier motion graphics was very experimental.<br>
-       Something that is interesting is that the effects these early pioneers would experiment with would actually have an influence to today’s movie producers and directors. 
+       While studying in San Francisco, I learned a lot about the involvement with media graphics.<br>
+      I worked along side with professionals to create traditional animation, storyboard, code, and video art.<br>
+      throughout my time there I gained an interest to exapnd my creativity and drive to fullfil the culture of digital media art. <br>
+       Motion graphics is what Disney does with their animation films and earlier motion graphics was very experimental and someone I highly look up to.<br>
+      It is interesting that the effects these early pioneers, such as Walt Disney, would experiment with would actually have an influence to today’s movie producers, directors, and artists like myself. 
       </p>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe><br>
