--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
  <link rel="stylesheet" type="text/css" href="main.css">
   <body>
     <center>
-    <h1>Hello World -- This is my website!</h1>
+    <h1>Art 103 Website</h1>
+      <h1> Charles Graciano</h1>
     </center>
     <p> As an artist, there are limitless ways to express our creativity.<br>
       Digital media  art can be contemporary or modern but the advancement in technology and art will only get better as time continues.<br>
@@ -18,8 +19,10 @@
        Motion graphics is what Disney does with their animation films and earlier motion graphics was very experimental and someone I highly look up to.<br>
       It is interesting that the effects these early pioneers, such as Walt Disney, would experiment with would actually have an influence to today’s movie producers, directors, and artists like myself. 
       </p>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe><br>
-    <a href="https://charlesgraciano.github.io/Charlie_Project3">CLICK ME</a>
+    <h3>SUBMISSIONS</h3>
+    
+    //<iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
+    //<iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe><br>
+    //<a href="https://charlesgraciano.github.io/Charlie_Project3">CLICK ME</a>
   </body>
 </html>
