--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       It is interesting that the effects these early pioneers, such as Walt Disney, would experiment with would actually have an influence to today’s movie producers, directors, and artists like myself. 
       </p>
     <h3>SUBMISSIONS</h3>
+    <p1> week 1 </p1>
+    <img src="IMG_3510.jpg">
     
     //<iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
     //<iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe><br>
