--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </p>
     <h3>SUBMISSIONS</h3>
     <p1> week 1 </p1>
-    <img src="IMG_3510.jpg">
+    <img src="IMG_3510.jpg" width= "500" height = "300">
     
     //<iframe title="vimeo-player" src="https://player.vimeo.com/video/359114787" width="640" height="266" frameborder="0" allowfullscreen></iframe>
     //<iframe title="vimeo-player" src="https://player.vimeo.com/video/371215141" width="640" height="360" frameborder="0" allowfullscreen></iframe><br>
