--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@ Almarie Mercado: acmercado3@gmail.com
     <h3>SUBMISSIONS</h3>
     <p1> Week 1  -  Oblique Strategies - Face With A Choice, Do Both </p1>
     <p1> Mengshi Chen - Breakfast</p1>
+    <img src="hmengshi_breakfast.png">
     <p1> Charles Graciano - Lunch </p>
     <img src="IMG_3510.jpg" width= "500" height = "300">
     <p1> Almarie Mercado - Dinner</p1>
+    <img src="dinner_view.png">
     <p1> Ericka Zhang - Dessert </p1>
+    <img src="icecreamboth.png">
     
   </body>
 </html>
