--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>(Charles Graciano)</title>
+    <title>(Food)</title>
  <link rel="stylesheet" type="text/css" href="main.css">
   <body>
     <center>
@@ -21,13 +21,13 @@ Almarie Mercado: acmercado3@gmail.com
     <h3>SUBMISSIONS</h3>
     <p1> Week 1  -  Oblique Strategies - Face With A Choice, Do Both </p1>
     <p1> Mengshi Chen - Breakfast</p1>
-    <img src="mengshi_breakfast.png">
+    <img src="mengshi_breakfast.png" width="500%" height="400%">
     <p1> Charles Graciano - Lunch </p>
-    <img src="IMG_3510.jpg" width= "500" height = "300">
+    <img src="IMG_3510.jpg" width="500%" height="400%">
     <p1> Almarie Mercado - Dinner</p1>
-    <img src="dinner_view.png">
+    <img src="dinner_view.png" width="500%" height="400%">
     <p1> Ericka Zhang - Dessert </p1>
-    <img src="ice cream both.png">
+    <img src="ice cream both.png" width="500%" height="400%">
     
   </body>
 </html>
