--- a/index.html
+++ b/index.html
@@ -31,10 +31,27 @@ Almarie Mercado: acmercado3@gmail.com
     <p1> Ericka Zhang - Dessert </p1>
     <img src="ice cream both.png" width="100%" height="100%">
     
-      <h1> WEEK 2 </h1>
+      <h3> Artist Examples </h3>
       <iframe width="1256" height="691" src="https://www.youtube.com/embed/WFp7oHtsDb8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <iframe width="1256" height="707" src="https://www.youtube.com/embed/S_C46FpXAcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <iframe width="1256" height="707" src="https://www.youtube.com/embed/jFUEirf8bPQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      
+      <h1> WEEK 2 <h2>
+        <p1> Reading No.1 </p1>
+        <p1> Q1: What is a good working definition of what a System is and perhaps what it is not?
+A good definition would be a series of interconnectivity as parts of a mechanism. Something that does not work in this topic, in my opinion,  would be an organized scheme of method.</br> 
+Q2: For the 4 system definitions you were to look up please give in your own words what they mean and give an example of them for each case. 
+Modularity: individual component details ( lincoln logs ). 
+Decomposability: breaking down of all things organic ( throwing a banana in soil than in the garbage ) .
+Emergence: growth, gradual incline / new interactions that build up into something big. (someone’s height piles of dirt) 
+Chaos Theory: random but organized, ( slinky toys)<br> 
+Q3: Give us your definition of what Tessellation means and give an example you encountered, not mentioned in the reading.
+Tessellation is a variety of shapes that create patterns using tiling techniques. I have seen examples of these Tessellations when learning about commissioned palaces in Turkey and the middle east to worship their beliefs.<br>
+Q4: What is The difference between ideas of Modularity and Tessellation? What are the properties that are in opposition with each other? 
+I feel Modularity is more organized and put together than Tessellations are. Modularities are attentive to details and have a rhythm and Tessellations are interpreted uniformed as well but I feel the key difference between these two is one is meant to be ornate and the other doesn't.<br> 
+Q5: What is the difference between designing something that has Complexity (aperiodic) vs being Uniform (periodic) 
+Complexity is irregular, it doesn't have any periodic repetition as for something that is uniform that element’s are recurring. </p1>
+
     </center>
   </body>
 </html>
