--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@ Almarie Mercado: acmercado3@gmail.com
     <p1> Ericka Zhang - Dessert </p1>
     <img src="ice cream both.png" width="100%" height="100%">
     
-      <h3> Artist Examples </h3>
+      <h3> Artist Examples, 3 videos of my style of art and process through creativity development</h3>
       <iframe width="1256" height="691" src="https://www.youtube.com/embed/WFp7oHtsDb8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p1> Limited animation done in graphite and animation paper. This is my first animation I have done when I studied animation at the Art Institute in San Francisco. It was an extraordinary experience learning from instructors who created, produced and assisted with animation and shows as a child. Walt Disney inspired me become an animator and story teller. Through the path of his success and loyalty Walt Disney showed me to never give up and dreams come true with hard work and dedication.</p1>
       <iframe width="1256" height="707" src="https://www.youtube.com/embed/S_C46FpXAcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p1>As an artist, I am curious. I am not afraid to think outside the of box and often find myself overwhelmed with creative ideas and concepts. Pandora's Box: Deming's Journey, combines multiple mediums through waves of sound and bouncing colors with images. Creating this edit showcases my talent as an artist and passion for my craft.</p1>
       <iframe width="1256" height="707" src="https://www.youtube.com/embed/jFUEirf8bPQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p1>My name is Charles Graciano and I am a first generation Mexican American in the Bay Area. Guanajuato is a city of beauty and love, and where my Mother originated. Her passion towards success and fulfillment inspired me to become an artist and create beyond my wildest imaginations. With my passion of art and love from my family and culture; I show you, Guanajuato: City of Beauty.</p1>
       
       <h1> WEEK 2 <h2>
         <p1> Reading No.1 </p1>
