--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ Q4: What is The difference between ideas of Modularity and Tessellation? What ar
 I feel Modularity is more organized and put together than Tessellations are. Modularities are attentive to details and have a rhythm and Tessellations are interpreted uniformed as well but I feel the key difference between these two is one is meant to be ornate and the other doesn't.<br> 
 Q5: What is the difference between designing something that has Complexity (aperiodic) vs being Uniform (periodic) 
 Complexity is irregular, it doesn't have any periodic repetition as for something that is uniform that element’s are recurring. </p1>
+        
+        <p1> 4 SYSTEMS </p1>
+        <img src="knex(modularity).jpg" width="100%" height="100%">
+        <img src="decomposabilitysystem.jpg" width="100%" height="100%">
+        <img src="hail.jpg" width="100%" height="100%">
+        <img src="chaosthoery.jpg" width="100%" height="100%">
+        
 
     </center>
   </body>
