--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@ Complexity is irregular, it doesn't have any periodic repetition as for somethin
         <img src="hail.jpg" width="100%" height="100%">
         <img src="chaosthoery.jpg" width="100%" height="100%">
         
+        <h1>------------------------------------</h1>
+        <h1>signs</h1>
+        <p1> Fusion 360 </p1>
+        <img src="springs1.png" width="100%" height="100%">
+        <img src="springs2.png" width="100%" height="100%">
+        <img src="springs3.png" width="100%" height="100%">
+        <img src="shape1.png" width="100%" height="100%">
+        <img src="shape2.png" width="100%" height="100%">
+        <img src="shape3.png" width="100%" height="100%">
+        
 
     </center>
   </body>
