--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ Complexity is irregular, it doesn't have any periodic repetition as for somethin
         <img src="shape1.png" width="100%" height="100%">
         <img src="shape2.png" width="100%" height="100%">
         <img src="shape3.png" width="100%" height="100%">
+        <p1> Timelines </p1>
+        <img src="timeline1.png" width="100%" height="100%">
+        <img src="timeline2.png" width="100%" height="100%">
+        
         
 
     </center>
