--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Complexity is irregular, it doesn't have any periodic repetition as for somethin
         <img src="chaosthoery.jpg" width="100%" height="100%">
         
         <h1>-----------COMING-SOON-DMANIACS-GROUP-PROJECT----------------------</h1>
-        <h1>signs</h1>
+        <h1>SIGNS: PHASE 1</h1>
         <p1> Fusion 360 </p1>
         <img src="springs1.png" width="100%" height="100%">
         <img src="springs2.png" width="100%" height="100%">
