--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ Complexity is irregular, it doesn't have any periodic repetition as for somethin
         <p1> Timelines </p1>
         <img src="timeline1.png" width="100%" height="100%">
         <img src="timeline2.png" width="100%" height="100%">
+         <img src="Screen Shot 2020-10-15 at 4.25.32 PM.png" width="100%" height="100%">
          <img src="Screen Shot 2020-10-15 at 12.25.50 PM.png" width="100%" height="100%">
          <img src="Screen Shot 2020-10-15 at 12.18.09 PM.png" width="100%" height="100%">
          
