--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@ Complexity is irregular, it doesn't have any periodic repetition as for somethin
         
         <h1>-----------------------DMANIACS-GROUP-PROJECT----------------------</h1>
         <h1>FASTENERS</h1>
-        <p> the idea behind this idea is to create a Fastener using paper amterial or anything that can be best suited for you. I choice Cardboard since this was the only materail around the house I had a lot of. The Box I chose to craete my Fastener had subtractive and additive indents which made my idea come together smoothly. 
+        <p> the idea behind this idea is to create a Fastener using paper amterial or anything that can be best suited for you. 
+          I choice Cardboard since this was the only materail around the house I had a lot of. 
+          The Box I chose to craete my Fastener had subtractive and additive indents which made my idea come together smoothly. 
         <img src="IMG_3510.jpg" width="100%" height="100%">
         <img src="IMG_3601.jpg" width="100%" height="100%">
         <img src="IMG_3602.jpg" width="100%" height="100%">
