--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@ Q3. First, summerize in your own words the characteristics of 'Material Speculat
 <iframe width="1280" height="720" src="https://www.youtube.com/embed/6wvRMYMzCV4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="1280" height="675" src="https://www.youtube.com/embed/p42dPdF56Tc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h4>Behind The Scenes</h4>
+	<h3> The making of the Hulu Tooth</h3>
+	<p> The tooth was made in Fusion 360. I was inspired by Shark teeth and other prehistoric fossils so I wanted to capture something that fit those two interests.
+		Once the tooth was designed to my liking, I decided to document an actual version of this model because I wanted to play guiat with it. ALthough it is shaped like a tooth and looks nothing like a traditional guitar pick, I wanted to give it a shot.
+		The final product was a lot larger than a normal guitar pick; the thickness is prominate. The model was printed in a clear arcylic but weathered with black ink, glow in the dark elmers glue and a lot of sanding. 
+	</p>
 <a>https://sjsu376.autodesk360.com/g/shares/SH56a43QTfd62c1cd968e2121b98f9228717?viewState=NoIgbgDAdAjCA0IDeAdEAXAngBwKZoC40ARXAZwEsBzAOzXjQEMyzd1C0BmXAMwBYARjAAcAgLQQAbAFYYYvhFliBAYzViAnDBUaA7JNwQBECLrQBfEAF0gA</a>
 <img src="Fusion Ex Hulu.jpg" width="100%" height="100%">
 <img src="Hulu Cura .png" width="100%" height="100%">
