--- a/page6.html
+++ b/page6.html
@@ -18,10 +18,10 @@
 	      
 	      <p>These renders demonstrate where these signs actually take place in our real world. I dfelrt these environments are best appropriated with these concepts.  </p>
 	      
-      <source src="sign renders/Screen Shot 2020-11-10 at 2.13.05 PM.mp4" type="video/mp4">
-        <source src="sign renders/Screen Shot 2020-11-10 at 2.46.31 PM.mp4" type="video/mp4">
-        <source src="sign renders/Screen Shot 2020-11-12 at 2.28.35 PM.mp4" type="video/mp4">
-        <source src="sign renders/ghost sign street .mp4" type="video/mp4">
+      <source src="ghost.mov"type="video/mov">
+        <source src="dog.mov"type="video/mov">
+        <source src="camping.mov"type="video/mov">
+        <source src="hydro.mov" type="video/mov">
             </center>
   </body>
 </html>
