--- a/page6.html
+++ b/page6.html
@@ -11,9 +11,13 @@
         <h2> mock ups: these signs are to be placed in thier apropriate locations where the sign makes sense. I decided to work with something playful and something
 	      to hopefully bring a little light to whats going on in our world. My idea is to have the viewer smile when they se these signs and also read the as functional works. </h2>
         <img src="sign renders/camping.png" width="100%" height="100%">
-        <img src="sign renders/HYDRO1.png" width="100%" height="100%">
+	    <a href="https://a360.co/3nftmdk">Fusion 360 live link</a>
+        <img src="sign renders/HYDRO1.png" width="100%" height="100%"> 
+	     <a href="https://a360.co/2W9hnln">Fusion 360 live link</a>
         <img src="sign renders/Ghost sign.png" width="100%" height="100%">
+	     <a href="https://a360.co/3qIfj1Q">Fusion 360 live link</a>
         <img src="sign renders/dogsign3.png" width="100%" height="100%">
+	     <a href="https://a360.co/3qRwvSz">Fusion 360 live link</a>
         <h2>3D Renders</h2>
 	      
 	      <p>These renders demonstrate where these signs actually take place in our real world. I dfelrt these environments are best appropriated with these concepts.  </p>
