Update and rename page4.html  to page4.html

--- a/page4.html
+++ b/page4.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>(Yearning For Some Learning)</title>
- <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
+ <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
     <h1>PHASE 1: Mod and Tessle </h1>
