--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>(Yearning For Some Learning)</title>
- <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
+ <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
     <h1>Art 103 Website - Submissions </h1>
     
     <h3>SUBMISSIONS</h3>
-      <a href="page1.html">Oblique Stratogies </a>
-      <a href="page2.html">Artist Examples</a>
-      <a href="page3.html">Reading 1.</a>
-      <a href="page4.html">Mod and Tessle</a>
-      <a href="page5.html">Fusion 360 exercises</a>
-      <a href="page6.html">Signs</a>
-      <a href="page7.html">Reading 3</a>
-      <a href="page8.html">Artifact</a>
+	    <a href="page1.html">Oblique Stratogies </a></br>
+	  <a href="page2.html">Artist Examples</a></br>
+      <a href="page3.html">Reading 1.</a></br>
+      <a href="page4.html">Mod and Tessle</a></br>
+      <a href="page5.html">Fusion 360 exercises</a></br>
+      <a href="page6.html">Signs</a></br>
+      <a href="page7.html">Reading 3</a></br>
+      <a href="page8.html">Artifact</a></br>
       </center>
   </body>
 </html>
