--- a/page1.html
+++ b/page1.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>(Yearning For Some Learning)</title>
- <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
+ <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
     <h1> Assignment 1 : Oblique Strategies and Process</h1>
 
 
-    <p1> Oblique Strategies - Face With A Choice, Do Both </p1>
+	    <p1> Oblique Strategies - Face With A Choice, Do Both 
+		    </br> we we given the task of of creating images based on an Oblique Stratogies. </p1>
 	    
 	    <p>Group name : DE$IGN3RZ
 (Erika) weixia zhang: weixiao.zhang@sjsu.edu
