--- a/page5.html
+++ b/page5.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>(Yearning For Some Learning)</title>
- <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
+ <link rel="stylesheet" type="text/css" href="main.css"> If you see this, you're awesome!
   <body>
     <center>
         <h1>Assignment 3 : Fusion 360 exercises.</h1>
