--- a/page6.html
+++ b/page6.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>(Yearning For Some Learning)</title>
- <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
+ <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
 
@@ -22,10 +22,10 @@
 	      
 	      <p>These renders demonstrate where these signs actually take place in our real world. I dfelrt these environments are best appropriated with these concepts.  </p>
 	      
-      <source src="ghost.mov"type="video/mov">
-        <source src="dog.mov"type="video/mov">
-        <source src="camping.mov"type="video/mov">
-        <source src="hydro.mov" type="video/mov">
+      <source src="ghost.mov">
+        <source src="dog.mov">
+        <source src="camping.mov">
+        <source src="hydro.mov">
             </center>
   </body>
 </html>
