--- a/page7.html
+++ b/page7.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>(Yearning For Some Learning)</title>
- <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
+ <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
 <h1> Assignment 4 : Reading 3</h1>
-        <p>Q1. From the podcast, how has our understanding of what dinoasaurs really look like evolved? Describe the progression of how we portrayed them and how might this effect our understanding of what Archeology is saying about them.
-          - 1. DINOSAURS ARE TOLD TO US AS MONSTERS AND VISUALLY TERRIFYING AND LRGER THAN LIFE. WE INTERPRET THESE CREATURES FROM WHAT WE HEAR AND SEE IN HISTORY AND THIS PODCAST BROUGHT AWARENESS TO ANOTHER POINT OF VIEW FOR VIEWING WHAT POSSIBLY COULD HAVE BEEN THE ACTUAL TRUTH. 
+        <p>Q1. From the podcast, how has our understanding of what dinoasaurs really look like evolved? Describe the progression of how we portrayed them and how might this effect our understanding of what Archeology is saying about them.</br>
+          - 1. DINOSAURS ARE TOLD TO US AS MONSTERS AND VISUALLY TERRIFYING AND LRGER THAN LIFE. WE INTERPRET THESE CREATURES FROM WHAT WE HEAR AND SEE IN HISTORY AND THIS PODCAST BROUGHT AWARENESS TO ANOTHER POINT OF VIEW FOR VIEWING WHAT POSSIBLY COULD HAVE BEEN THE ACTUAL TRUTH.</br> 
 
-Q2. The artist/archcologist John Conway who is doing interpretaions of dinosaurs is obviously taking liberty with what could be the actual truth of how these creatures existed. What other disciplines and forms of studies use similer techniques that reminds you of this method or process. Please eloborate with your examples both written as well as images and links.
-          - 2.  Interpretations can become reality, for example. When investigating a crime in forensics. The crime is manipulated through creative artists to show a demonstration of the crime scene.
+Q2. The artist/archcologist John Conway who is doing interpretaions of dinosaurs is obviously taking liberty with what could be the actual truth of how these creatures existed. What other disciplines and forms of studies use similer techniques that reminds you of this method or process. Please eloborate with your examples both written as well as images and links.</br>
+          - 2.  Interpretations can become reality, for example. When investigating a crime in forensics. The crime is manipulated through creative artists to show a demonstration of the crime scene.</br>
 
-Q3. First, summerize in your own words the characteristics of 'Material Speculation' as described in the second article. So given this article's examples for possible future products, how can this same technique also be used to create objects that refer to the past? 
+Q3. First, summerize in your own words the characteristics of 'Material Speculation' as described in the second article. So given this article's examples for possible future products, how can this same technique also be used to create objects that refer to the past? </br>
         -3. Reasoning of what happens in a process of rules or predictions.</p>
 	       </center>
   </body>
