--- a/page6.html
+++ b/page6.html
@@ -21,12 +21,19 @@
         <h2>3D Renders</h2>
 	      
 	      <p>These renders demonstrate where these signs actually take place in our real world. I dfelrt these environments are best appropriated with these concepts.  </p>
-	      
-      <source src="ghost.mov">
-        <source src="dog.mov">
-        <source src="camping.mov">
-        <source src="hydro.mov">
-            </center>
+	    <h2> Camping Sign</h2>
+	    </br>    
+      <iframe width="1280" height="624" src="https://www.youtube.com/embed/o9ZyRxiDRRs?list=UU2zcXSwvWuzMtzeHkA1or4A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  <h2> Dog Sign</h2> 
+	  </br>  
+	    <iframe width="1280" height="536" src="https://www.youtube.com/embed/khZK0WgnnkE?list=UU2zcXSwvWuzMtzeHkA1or4A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             <h2> Speed Dip Sign</h2> 
+	  </br>
+	  <iframe width="1280" height="680" src="https://www.youtube.com/embed/o_UjIQlf_eY?list=UU2zcXSwvWuzMtzeHkA1or4A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	   <h2>Ghost Sign</h2> 
+	</br>
+	  <iframe width="1280" height="768" src="https://www.youtube.com/embed/pMA79PpD3AY?list=UU2zcXSwvWuzMtzeHkA1or4A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  </center>
   </body>
 </html>
 
