--- a/page6.html
+++ b/page6.html
@@ -8,7 +8,29 @@
     <center>
 
  <h1>Assignment 4 : Signs </h1>
-        <h2> mock ups: these signs are to be placed in thier apropriate locations where the sign makes sense. I decided to work with something playful and something
+	    <h1> Sign Ideas</h1>
+	    <p> In these four concepts, i wanted to incorporate a playful sign that would fit into the scenery its inhabitated in.</p>
+	    <img src="commplete.mail.jpg" width="100%" height="100%">
+	     <p> Thsi idea came to me because during the pandemic, I noticed USPS has been really backed up and sometimes our mail would arrive very late in the night. This sign is to show the Mail workers tat they are appreciated and to thank them for thier hard work and service during these troubled times. </p>
+	    </br>
+	    <img src="Complete.cat.jpg" width="100%" height="100%">
+	  <p> This idea was veery random. whenever I would come home from work, there would always be a black cat on side of the street. It's always there and very confident when standing its ground the the surrounding loud noises. Thso sign is tho playfully play with the idea that this cat is cursed that those who cross should be aware.</p>
+	  </br>
+	    <img src="complete.dog.jpg" width="100%" height="100%">
+	   <p> there is a hedge that stands in front of my home that is known for the neighborhood dogs do thier business. I made this sign, giving the advantage to the aniamls to use the restroom when they need. </p>
+	  </br>
+	    <img src="complete.end.jpg" width="100%" height="100%">
+	 <p> there is a long road that leads up to no where. This sign said "not a through street" but I wanted to annouce there was nothing left beyond that point. </p>
+	</br>
+<h1>CAD</h1></br>
+<p>Stamp Ideas designed in Fusion 360</p>
+<h3> shape 1 </h3></br>
+<img src="shape1CAD.jpg" width="100%" height="100%">
+<a href="https://a360.co/3a2CdeB">Fusion 360 live link</a>
+<h3> shape 2 </h3></br>
+<img src="shape2CAD.jpg" width="100%" height="100%">
+<a href="https://a360.co/2KigBzV">Fusion 360 live link</a>
+        <h2> mock ups:  I took a different approach to creating thes signs. As a mentioned previously, these signs are to be placed in thier apropriate locations where the sign makes sense. I decided to work with something playful and something
 	      to hopefully bring a little light to whats going on in our world. My idea is to have the viewer smile when they se these signs and also read the as functional works. </h2>
         <img src="sign renders/camping.png" width="100%" height="100%">
 	    <a href="https://a360.co/3nftmdk">Fusion 360 live link</a>
