--- a/page5.html
+++ b/page5.html
@@ -20,6 +20,7 @@
 	      these timelines work in layers. every icon represents a particular action youve done to youre model. the blue cursur is where the actions continue but if there is something to fix or anything else that requires rewinding, simply pull back the blue cursur to complete the desired action. </p1>
         <img src="timeline1.png" width="100%" height="100%">
         <img src="timeline2.png" width="100%" height="100%">
+	    <h1>TeaPot Models</h1>
          <img src="Screen Shot 2020-10-15 at 4.25.32 PM.png" width="100%" height="100%">
          <img src="Screen Shot 2020-10-15 at 12.25.50 PM.png" width="100%" height="100%">
          <img src="Screen Shot 2020-10-15 at 12.18.09 PM.png" width="100%" height="100%">
