--- a/page6.html
+++ b/page6.html
@@ -36,7 +36,7 @@
 	    <a href="https://a360.co/3nftmdk">Fusion 360 live link</a>
         <img src="sign renders/HYDRO1.png" width="100%" height="100%"> 
 	     <a href="https://a360.co/2W9hnln">Fusion 360 live link</a>
-        <img src="sign renders/Ghost sign.png" width="100%" height="100%">
+        <img src="ghost.jpg" width="100%" height="100%">
 	     <a href="https://a360.co/3qIfj1Q">Fusion 360 live link</a>
         <img src="sign renders/dogsign3.png" width="100%" height="100%">
 	     <a href="https://a360.co/3qRwvSz">Fusion 360 live link</a>
