--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <a href="page3.html">Reading 1.</a></br>
       <a href="page4.html">Mod and Tessle</a></br>
       <a href="page5.html">Fusion 360 exercises</a></br>
+<a href="page9.html">Reading 2.</a></br>
       <a href="page6.html">Signs</a></br>
-      <a href="page7.html">Reading 3</a></br>
+      <a href="page7.html">Reading 3.</a></br>
       <a href="page8.html">Artifact</a></br>
       </center>
   </body>
