--- a/page1.html
+++ b/page1.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
+	      <a href="index.html">HOME</a></br>
     <h1> Assignment 1 : Oblique Strategies and Process</h1>
 
 
