--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
   <body>
     <center>
+     <a href="index.html">HOME</a></br>
     	<h3> Artist Examples, 3 videos of my style of art and process through creativity development</h3>
       <iframe width="1256" height="691" src="https://www.youtube.com/embed/WFp7oHtsDb8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p1> Limited animation done in graphite and animation paper. This is my first animation I have done when I studied animation at the Art Institute in San Francisco. It was an extraordinary experience learning from instructors who created, produced and assisted with animation and shows as a child. Walt Disney inspired me become an animator and story teller. Through the path of his success and loyalty Walt Disney showed me to never give up and dreams come true with hard work and dedication.</p1>
