--- a/page4.html
+++ b/page4.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
+	    <a href="index.html">HOME</a></br>
     <h1>PHASE 1: Mod and Tessle </h1>
         <p1> 4 SYSTEMS </p1>
         <img src="knex(modularity).jpg" width="100%" height="100%">
@@ -45,7 +46,7 @@
         <img src="paint1.jpg" width="100%" height="100%">
         <img src="paint2.jpg" width="100%" height="100%">
         <h1>COMPLETED Phase 8</h1>
-        <img src="PP8A6916.jpg" width="100%" height="100%">
+        <img src="cp.jpg" width="100%" height="100%">
         <p> Finshed product of Complexus</p>
         <iframe width="640" height="360" src="https://www.youtube.com/embed/WG9IZ0z7GT0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </center>
